scale fix ; nowrap fix

--- a/src/style/partials/common.scss
+++ b/src/style/partials/common.scss
@@ -12,7 +12,7 @@ body {
 }
 
 p {
-	font-size: 1rem;
+	font-size: 2vh;
 	margin: 0;
 	line-height: 1.4;
 }
