--- a/src/style/partials/custom-media.scss
+++ b/src/style/partials/custom-media.scss
@@ -33,7 +33,7 @@ only screen and (min-aspect-ratio: 850/667) {
 	.page-4 {
 		.img-container {
 			img {
-				margin-top: -3rem;
+				margin-top: -6vh;
 			}
 		}
 	}
@@ -48,7 +48,7 @@ only screen and (min-aspect-ratio: 950/667)  {
 
 	.page-1 {
 		.hgroup-1 {
-			font-size: 1.0rem;
+			font-size: 2vh;
 		}
 	}
 
@@ -63,7 +63,7 @@ only screen and (min-aspect-ratio: 950/667)  {
 	.page-4 {
 		.img-container {
 			img {
-				margin-top: -4rem;
+				margin-top: -8vh;
 			}
 		}
 	}
@@ -74,7 +74,7 @@ only screen and (min-aspect-ratio: 1050/667) {
 
 	.page-1 {
 		.hgroup-1 {
-			font-size: 1.1rem;
+			font-size: 2.2vh;
 		}
 	}
 
@@ -82,7 +82,7 @@ only screen and (min-aspect-ratio: 1050/667) {
 		.img-container {
 			img {
 				width: 100%;
-				margin-top: -1.5rem;
+				margin-top: -3vh;
 			}
 		}
 
@@ -91,7 +91,7 @@ only screen and (min-aspect-ratio: 1050/667) {
 	.page-4 {
 		.img-container {
 			img {
-				margin-top: -5rem;
+				margin-top: -10vh;
 			}
 		}
 	}
@@ -106,13 +106,13 @@ only screen and (min-aspect-ratio: 1150/667) {
 
 	.page-1 {
 		.hgroup-1 {
-			font-size: 1.2rem;
+			font-size: 2.4vh;
 		}
 	}
 
 	.page-2 {
 		.img-container {
-			width: 40rem;
+			width: 80vh;
 			margin: auto;
 			img {
 				margin: 0 auto;
@@ -123,7 +123,7 @@ only screen and (min-aspect-ratio: 1150/667) {
 	.page-4 {
 		.img-container {
 			img {
-				margin-top: -6.25rem;
+				margin-top: -12.5vh;
 			}
 		}
 	}
@@ -132,7 +132,7 @@ only screen and (min-aspect-ratio: 1150/667) {
 		.img-container {
 			img {
 				width: 100%;
-				margin-top: -4.4rem;
+				margin-top: -8.8vh;
 			}
 		}
 	}
@@ -149,7 +149,7 @@ only screen and (min-aspect-ratio: 1250/667) {
 		.img-container {
 			img {
 				width: 100%;
-				margin-top: -6.75rem;
+				margin-top: -13.5vh;
 			}
 		}
 	}
