--- a/src/style/partials/custom.scss
+++ b/src/style/partials/custom.scss
@@ -4,7 +4,7 @@
 	.hgroup-1 {
 		position: relative;
 		// top: 4.5%;
-		top: -1rem;
+		top: -2vh;
 		width: 100%;
 		text-align: center;
 		color: #fff;
@@ -27,7 +27,7 @@
 
 	p {
 		max-width: 16.4em;
-		font-size: 1.3rem;
+		font-size: 2.6vh;
 	}
 
 }
@@ -49,8 +49,8 @@
 		}
 	}
 	.full-text {
-		padding-top: 1.2rem;
-		padding-bottom: 1.2rem;
+		padding-top: 2.4vh;
+		padding-bottom: 2.4vh;
 		margin-top: auto;
 		margin-bottom: auto;
 	}
@@ -63,17 +63,17 @@
 		overflow:hidden;
 		img {
 			position: relative;
-			margin-top: -2.7rem;
+			margin-top: -5.4vh;
 			width: 106%;
 		}
 	}
 
 	.full-text {
-		padding-top: 1.2rem;
-		padding-bottom: 1.2rem;
+		padding-top: 2.4vh;
+		padding-bottom: 2.4vh;
 		margin-top: auto;
 		margin-bottom: auto;
-		column-gap: 1.5rem;
+		column-gap: 3vh;
 		p {
 			line-height: 1.3;
 			margin-left: 0;
@@ -88,7 +88,7 @@
 	.text {
 		position: absolute;
 		color: #fff;
-		font-size: 1.3rem;
+		font-size: 2.6vh;
 		width: 11.6em;
 		left: 50%;
 		top: 65%;
