--- a/src/style/partials/section-page.scss
+++ b/src/style/partials/section-page.scss
@@ -1,5 +1,5 @@
 .content {
-	padding: 2.4rem 2.4rem 2.2rem;
+	padding: 4.8vh 4.8vh 4.4vh;
 	box-sizing: border-box;
 }
 
@@ -10,8 +10,6 @@
 	margin: 0 auto;
 	height: 100%;
 	position: absolute;
-	// left: calc(50% - 56.222vh / 2);
-
 	right:0;
 	top: 0;
 	background-color: #fff;
@@ -64,10 +62,10 @@
 
 		.inner-text {
 			position: relative;
-			padding-bottom: 2rem;
+			padding-bottom: 4vh;
 			margin: 0 auto;
 			max-width: 30em;
-			font-size: 1.25rem;
+			font-size: 2.5vh;
 
 			p {
 				font-size: 1em;
@@ -81,7 +79,7 @@
 		display: flex;
 		flex-direction: column;
 
-		font-size: 1.3rem;
+		font-size: 2.6vh;
 
 		.inner-video {
 			flex-grow: 1;
@@ -136,7 +134,7 @@
 
 	width: 17em;
 	box-sizing: border-box;
-	font-size: 1rem;
+	font-size: 2vh;
 
 	h2 {
 		font-family: 'Boyarsky', 'PT Sans', Arial, sans-serif;
@@ -164,13 +162,12 @@
 	}
 
 	&--smaller {
-		font-size: .9rem;
+		font-size: 1.8vh;
 	}
 
 	&--offset {
 		width: 100%;
 		h2~h3 {
-			// margin-top: -.2em;
 			margin-left: 1em;
 		}
 	}
@@ -180,7 +177,7 @@
 	width: 10em;
 	color: #fff;
 	box-sizing: content-box;
-	font-size: 1.1rem;
+	font-size: 2.2vh;
 
 	img {
 		display: block;
@@ -217,8 +214,8 @@
 	position: absolute;
 	display: flex;
 	height: 100%;
-	width: 100%;
-	max-width: 30rem;
+	width: 60vh;
+	max-width: 100%;
 	box-sizing: border-box;
 	flex-direction: column;
 	text-align: justify;
@@ -227,21 +224,21 @@
 	transform: translateX(-50%);
 
 	p {
-		font-size: 1.18rem;
+		font-size: 2.36vh;
 		line-height: 1.3;
 		margin: auto;
 	}
 
 	p:not(:last-child) {
 		// margin-top: 0;
-		// margin-bottom: 1rem;
+		// margin-bottom: 2vh;
 	}
 
 	&--d-col {
 		display: block;
 		position: relative;
 		column-count: 2;
-		column-gap: 2rem;
+		column-gap: 4vh;
 		text-align: left;
 	}
 }
@@ -251,18 +248,18 @@
 	width: 13.5em;
 	max-width: 48%;
 	position: absolute;
-	bottom: 3.2rem;
+	bottom: 6.4vh;
 	text-align: justify;
 	color: #fff;
 	font-weight: 300;
-	font-size: 1.1rem;
+	font-size: 2.2vh;
 
 	&--rb {
-		right: 3.2rem;
+		right: 6.4vh;
 	}
 
 	&--lb {
-		left: 3.2rem;
+		left: 6.4vh;
 	}
 
 }
@@ -270,9 +267,9 @@
 	// full-width content in 2 columns
 .double-col {
 	column-count: 2;
-	column-gap: 2rem;
+	column-gap: 4vh;
 	text-align: justify;
-	font-size: 1rem;
+	font-size: 2vh;
 	max-width: 25em;
 	margin: 0 auto;
 	p {
@@ -290,7 +287,7 @@
 	max-width: 60%;
 	margin: 0 auto;
 	transform: translateY(-50%);
-	font-size: 1.5rem;
+	font-size: 3vh;
 	line-height: 1.3;
 	font-weight: 400;
 	&:after {
@@ -299,23 +296,16 @@
 		height: 1px;
 		background-color: #000;
 		position: absolute;
-		bottom: -2.7rem;
+		bottom: -5.4vh;
 		left: 50%;
 		transform: translateX(-50%);
-		width: 8rem;
+		width: 16vh;
 	}
 }
 
-
-// modificators
-
-// .small-text {
-// 	font-size: 1rem;
-// }
 .justify {
 	text-align: justify;
 }
-
 
 &.italic,
 &.quote {
@@ -335,4 +325,16 @@
 	right: 0;
 	bottom: 0;
 	text-align: right;
+
+	p {
+		font-size: 2.30vh;
+		white-space: nowrap;
+	}
+}
+
+.over-text {
+	position: absolute;
+	bottom: 2vh;
+	right: 2vh;
+	z-index: 9;
 }
